# small-tool

./: README.md
c/: i2c.c  spi.c  tcp-client.c  tcp-server.c  uart.c
c/tcplib/: .gitignore  CMakeLists.txt
c/tcplib/include/: tcp.h
c/tcplib/src/: CMakeLists.txt  tcpClient.c
c/tcplib/test/: CMakeLists.txt  testClient.c
python/: tcpServer.py  tcpServerHex.py
shell/: damon.sh
